# Election-Booth

./: .gitignore  README.md  functions.py  main.py  names.txt  pass.py  pyproject.toml  requirements.txt  s.py  script.py  votes.txt
